[metadata]
name = gramai
version = 0.1
author = Boling

[options]
packages = find:
install_requires =
    pip~=25.0.1
    build~=1.2.1
    toml~=0.10.2
    wheel~=0.41.2
    setuptools~=70.2.0
    future~=0.18.3
    sanic~=24.6.0
    contextvars~=2.4
    peewee~=3.17.9
    pymysql~=1.1.1
    requests==2.32.3
[options.packages.find]
where = src/
